--- a/package.json
+++ b/package.json
@@ -2,16 +2,20 @@
   "name": "interactive-scatterplots",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/scatter.js",
   "scripts": {
-    "test": "./node_modules/.bin/babel-node --presets es2015 test.js"
+    "compile": "rollup index.js --format cjs --output dist/scatter.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-preset-es2015": "^6.24.1",
     "d3": "^4.9.1",
     "d3-node": "^1.0.2"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "rollup": "^0.41.6",
+    "rollup-plugin-node-resolve": "^3.0.0"
   }
 }
