--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "d3": "^4.9.1",
-    "d3-node": "^1.0.2"
+    "jsdom": "^11.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
