--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "dist/scatter.js",
   "scripts": {
-    "compile": "rollup index.js --format cjs --output dist/scatter.js"
+    "compile": "rollup index.js --format cjs --output dist/scatter.js; node-sass scss/defaults.scss dist/scatter.css",
+    "test": "./node_modules/.bin/babel-node --presets es2015 test/test.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +16,9 @@
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
+    "harp": "^0.24.0",
+    "jade": "^1.11.0",
+    "node-sass": "^4.5.3",
     "rollup": "^0.41.6",
     "rollup-plugin-node-resolve": "^3.0.0"
   }
