--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "dist/scatter.js",
   "scripts": {
-    "compile": "rollup index.js --format cjs --output dist/scatter.js; node-sass scss/defaults.scss dist/scatter.css",
-    "test": "./node_modules/.bin/babel-node --presets es2015 test/test.js"
+    "compile": "rollup index.js --format cjs --output dist/scatter.js; node-sass scss/defaults.scss dist/scatter.css"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "d3": "^4.9.1",
+    "d3-array": "^1.2.1",
+    "d3-scale": "^2.0.0",
+    "d3-selection": "^1.3.0",
+    "d3-voronoi": "^1.1.2",
     "jsdom": "^11.0.0"
   },
   "devDependencies": {
